Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30577

Case folding for uca1400 collations is not up to date

    XMLWordPrintable

Details

    Description

      UCA1400 collations (added by MDEV-27009) currently use Unicode-5.2.0 case folding tables.

      They should use Unicode-14.0.0 tables instead.

      The difference (see attached diff-520-1400.diff) between these two files:

      shows that a few hundred new case folding mapping pairs where added in these letter scripts:

      Cyrillic, Gergian, Cherokee, Glagolitic, Coptic, Latin, Osage, Vithkuqi, Old Hungarian, Warang Citi, Medefaidrin, Adlam.

      This SQL script demonstrates the out-dated case folding:

      CREATE OR REPLACE TABLE t1 (a VARCHAR(10) CHARACTER SET utf8 COLLATE uca1400_ai_ci);
      # Insert letters appeared in Unicode-6.1 (released in January 2012)
      INSERT INTO t1 VALUES (_ucs2 0xA792) /* U+A792 LATIN CAPITAL LETTER C WITH BAR */;
      INSERT INTO t1 VALUES (_ucs2 0xA793) /* U+A793 LATIN SMALL LETTER C WITH BAR */;
      SELECT HEX(a), HEX(LOWER(a)), HEX(UPPER(a)), a, LOWER(a), UPPER(a) FROM t1;
      

      +--------+---------------+---------------+------+----------+----------+
      | HEX(a) | HEX(LOWER(a)) | HEX(UPPER(a)) | a    | LOWER(a) | UPPER(a) |
      +--------+---------------+---------------+------+----------+----------+
      | EA9E92 | EA9E92        | EA9E92        | Ꞓ    | Ꞓ        | Ꞓ        |
      | EA9E93 | EA9E93        | EA9E93        | ꞓ    | ꞓ        | ꞓ        |
      +--------+---------------+---------------+------+----------+----------+
      

      The above two characters (first appeared in Unicode-6.1) are expected to map to each other by functions UPPER and LOWER.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6d 4.5h
                  6d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.