MDEV-30577 Case folding for uca1400 collations is not up to date

In progress