strings/ctype-sjis.c
@@ -198,7 +198,7 @@ static const uchar sort_order_sjis[]=
 #define sjiscode(c,d)	((((uint) (uchar)(c)) << 8) | (uint) (uchar) (d))
 
 
-static MY_CASEFOLD_CHARACTER c81[256]=
+static const MY_CASEFOLD_CHARACTER c81[256]=
 {
   /* 8100-810F */
   {0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},
@@ -408,7 +408,7 @@ static MY_CASEFOLD_CHARACTER c81[256]=
 };
 
 
-static MY_CASEFOLD_CHARACTER c82[256]=
+static const MY_CASEFOLD_CHARACTER c82[256]=
 {
   /* 8200-820F */
   {0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},
@@ -616,7 +616,7 @@ static MY_CASEFOLD_CHARACTER c82[256]=
 };
 
 
-static MY_CASEFOLD_CHARACTER c83[256]=
+static const MY_CASEFOLD_CHARACTER c83[256]=
 {
   /* 8300-830F */
   {0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},
@@ -826,7 +826,7 @@ static MY_CASEFOLD_CHARACTER c83[256]=
 };
 
 
-static MY_CASEFOLD_CHARACTER c84[256]=
+static const MY_CASEFOLD_CHARACTER c84[256]=
 {
   /* 8400-840F */
   {0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},{0,0},
@@ -1036,7 +1036,7 @@ static MY_CASEFOLD_CHARACTER c84[256]=
 };
 
 
-static MY_CASEFOLD_CHARACTER *my_casefold_pages_sjis[256]=
+static const MY_CASEFOLD_CHARACTER *my_casefold_pages_sjis[256]=
 {
   NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, /* 0 */
   NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL,
@@ -1076,7 +1076,8 @@ static MY_CASEFOLD_CHARACTER *my_casefold_pages_sjis[256]=
 static MY_CASEFOLD_INFO my_casefold_sjis=
 {
   0xFFFF,
-  my_casefold_pages_sjis
+  my_casefold_pages_sjis,
+  NULL /* ws */
 };
 
 
@@ -34193,7 +34194,6 @@ struct charset_info_st my_charset_sjis_japanese_ci=
     NULL,		/* tab_to_uni   */
     NULL,		/* tab_from_uni */
     &my_casefold_sjis,  /* casefold     */
-    NULL,               /* caseinfo     */
     NULL,		/* state_map    */
     NULL,		/* ident_map    */
     1,			/* strxfrm_multiply */
@@ -34224,7 +34224,6 @@ struct charset_info_st my_charset_sjis_bin=
     NULL,		/* tab_to_uni   */
     NULL,		/* tab_from_uni */
     &my_casefold_sjis,  /* casefold     */
-    NULL,               /* caseinfo     */
     NULL,		/* state_map    */
     NULL,		/* ident_map    */
     1,			/* strxfrm_multiply */
@@ -34256,7 +34255,6 @@ struct charset_info_st my_charset_sjis_japanese_nopad_ci=
     NULL,                /* tab_to_uni       */
     NULL,                /* tab_from_uni     */
     &my_casefold_sjis,   /* casefold         */
-    NULL,                /* caseinfo     */
     NULL,                /* state_map        */
     NULL,                /* ident_map        */
     1,                   /* strxfrm_multiply */
@@ -34287,7 +34285,6 @@ struct charset_info_st my_charset_sjis_nopad_bin=
     NULL,                /* tab_to_uni       */
     NULL,                /* tab_from_uni     */
     &my_casefold_sjis,   /* casefold         */
-    NULL,                /* caseinfo         */
     NULL,                /* state_map        */
     NULL,                /* ident_map        */
     1,                   /* strxfrm_multiply */
